# Dl_ops_project

./: main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 03_prepare_callbacks.ipynb  data_ingestion.ipynb  prepare_base_model_config.ipynb
src/CnnClassifer/: __init__.py
src/CnnClassifer/components/: data_ingestion.py  prepare_base_model.py
src/CnnClassifer/config/: configuration.py
src/CnnClassifer/entity/: config_entity.py
src/CnnClassifer/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py
src/CnnClassifer/utils/: common.py
