[project]
name = "dl-ops-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "dl-ops-practice",
    "dvc>=3.61.0",
    "ensure==1.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "python-box==6.0.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv.sources]
dl-ops-practice = { workspace = true }
